--- a/ScreenModule/platformio.ini
+++ b/ScreenModule/platformio.ini
@@ -5,3 +5,6 @@ framework = arduino
 lib_deps =
   adafruit/Adafruit GFX Library
   adafruit/Adafruit SSD1306
+
+monitor_filters = send_on_enter
+monitor_echo = yes
