Switched to Uno R4 from nano
Nano -> Uno R4 (or anything that has more flash lmao)

Fixed issue with display missing every other pixel vert

song seek position updates faster

--- a/ScreenModule/platformio.ini
+++ b/ScreenModule/platformio.ini
@@ -1,10 +1,14 @@
 [env:nano]
-platform = atmelavr
-board = nanoatmega328new
+platform = renesas-ra
+board = uno_r4_minima
 framework = arduino
+
 lib_deps =
   adafruit/Adafruit GFX Library
   adafruit/Adafruit SSD1306
+  olikraus/U8g2 @ ^2.34.1
+  adafruit/Adafruit BusIO @ ^1.14.1
+  
 
 monitor_filters = send_on_enter
 monitor_echo = yes
